--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,29 +7,76 @@ Table of Contents:
     3. Areas
     4. Media Queries
 ////////////////////////////////////////////////////////////////////////*/
+/*  peach F9C48B -- atomic tangerine F69051 -- burnt sienna F26D40 -- black bean 260803 -- seashell FDEFEC */
 
 /*////////////////////////
     1. Global Styles
 ////////////////////////*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 body {
     font-family: 'Dosis', sans-serif;
     font-weight: 400;
+    background-color: #F9C48B;
+    color: #620803;
 }
+
+html {
+    font-size: 16px;
+}
+img {
+    width: 100%;
+    height: auto;
+}
+
 
 /*////////////////////////
     2. Typography
 ////////////////////////*/
 
+h2 {
+    margin: 0 0 1rem 0;
+}
 
+p {
+    margin: 1rem 0;
+}
 
 /*////////////////////////
     3. Areas
 ////////////////////////*/
+.text-section {
+    background-color: #FDEFEC;
+    border-radius: 10px;
+    padding: 2rem;
+    margin: 2rem;
 
-
-
+}
 
 /*////////////////////////
-    2. Media Queries
+    4. Media Queries
 ////////////////////////*/
+
+@media screen and (min-width: 900px) {
+    body {
+        background-color: #F69051;
+    }
+
+    html {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body {
+        background-color: #F26D40;
+    }
+
+    html {
+        font-size: 20px;
+    }
+}
